; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_common.c_do_poll.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/librdmacm/examples/extr_common.c_do_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pollfd = type { i32 }

@POLLERR = common dso_local global i32 0, align 4
@POLLHUP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_poll(%struct.pollfd* %0, i32 %1) #0 {
  %3 = alloca %struct.pollfd*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.pollfd* %0, %struct.pollfd** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %6

6:                                                ; preds = %10, %2
  %7 = load %struct.pollfd*, %struct.pollfd** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @rs_poll(%struct.pollfd* %7, i32 1, i32 %8)
  store i32 %9, i32* %5, align 4
  br label %10

10:                                               ; preds = %6
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  br i1 %13, label %6, label %14

14:                                               ; preds = %10
  %15 = load i32, i32* %5, align 4
  %16 = icmp eq i32 %15, 1
  br i1 %16, label %17, label %25

17:                                               ; preds = %14
  %18 = load %struct.pollfd*, %struct.pollfd** %3, align 8
  %19 = getelementptr inbounds %struct.pollfd, %struct.pollfd* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @POLLERR, align 4
  %22 = load i32, i32* @POLLHUP, align 4
  %23 = or i32 %21, %22
  %24 = and i32 %20, %23
  br label %27

25:                                               ; preds = %14
  %26 = load i32, i32* %5, align 4
  br label %27

27:                                               ; preds = %25, %17
  %28 = phi i32 [ %24, %17 ], [ %26, %25 ]
  ret i32 %28
}

declare dso_local i32 @rs_poll(%struct.pollfd*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
